<resources>
    <string name="app_name">Calendar Y</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_event">Create Event</string>

    <!--Edit Text-->
    <string name="et_title_hint">Enter Event Title</string>
    <string name="et_start_date_hint">Enter Start Date</string>
    <string name="et_start_time_hint">Enter Start Time</string>
    <string name="et_end_date_hint">Enter End Date</string>
    <string name="et_end_time_hint">Enter End Time</string>

    <!--Text View-->
    <string name="tv_start_date">Event Start</string>
    <string name="tv_end_date">Event End</string>
    <string name="tv_description">Description</string>

    <!--Messages-->
    <string name="reverse_date_message">Start Time is after End Time. Please enter valid values.</string>
    <string name="missing_date_message">Please enter valid values for Title and Start and End Event Times</string>
    <string name="title_activity_view_events">ViewEvents</string>
    <string name="no_events">No Events Today</string>
</resources>
