<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wisc.ganz.calendary.CreateEvent"
    tools:showIn="@layout/activity_create_event">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/et_title_hint"
        android:textSize="18sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_start_date"
        android:textSize="18sp"
        android:id="@+id/textView_start_date"
        android:layout_below="@+id/editText_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/editText_start_date"
        android:layout_below="@+id/textView_start_date"
        android:layout_alignParentStart="true"
        android:hint="@string/et_start_date_hint"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:focusable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:id="@+id/editText_start_time"
        android:layout_below="@+id/editText_start_date"
        android:layout_alignParentStart="true"
        android:hint="@string/et_start_time_hint"
        android:textSize="15sp"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_end_date"
        android:textSize="18sp"
        android:id="@+id/textView_end_date"
        android:layout_below="@+id/editText_start_time"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/editText_end_date"
        android:layout_below="@+id/textView_end_date"
        android:layout_alignParentStart="true"
        android:hint="@string/et_end_date_hint"
        android:textSize="15sp"
        android:focusable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:id="@+id/editText_end_time"
        android:layout_below="@+id/editText_end_date"
        android:layout_alignParentStart="true"
        android:hint="@string/et_end_time_hint"
        android:textSize="15sp"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_description"
        android:textSize="18sp"
        android:id="@+id/textView_description"
        android:layout_below="@+id/editText_end_time"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/editText_description"
        android:layout_below="@+id/textView_description"
        android:layout_alignParentStart="true"/>


</RelativeLayout>
